--- a/sprint-1/styles/partials/_biography.scss
+++ b/sprint-1/styles/partials/_biography.scss
@@ -21,7 +21,8 @@
 
   &__image {
     margin: 0 5vw 24px 5vw;
-    width: 90vw;
+    width: 288px;
+    height: 145px;
   }
 
   &__quote {
@@ -77,7 +78,8 @@
 
     &__image {
       margin: 0 3.125vw 48px 3.125vw;
-      width: 93.75vw;
+      width: 720px;
+      height: 362px;
     }
 
     &__quote {
@@ -126,6 +128,7 @@
     &__image {
       margin: 0 12.5vw 48px 12.5vw;
       width: 896px;
+      height: 450px;
     }
 
     &__quote {
