--- a/sprint-1/styles/partials/_header.scss
+++ b/sprint-1/styles/partials/_header.scss
@@ -3,7 +3,8 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 100vw;
+  // width: 100vw;
+  width: 100%;
   height: 80px;
   background-color: $black;
 
@@ -18,7 +19,8 @@
     display: flex;
     flex-direction: row;
     height: 50%;
-    width: 100vw;
+    // width: 100vw;
+    width: 100%;
   }
 
   &__list-item {
