--- a/sprint-1/styles/partials/_hero.scss
+++ b/sprint-1/styles/partials/_hero.scss
@@ -5,14 +5,16 @@
 
   &__image {
     position: absolute;
-    width: 100vw;
+    // width: 100vw;
+    width: 100%;
     height: $hero-height;
     z-index: 0;
   }
 
   &__overlay {
     position: absolute;
-    width: 100vw;
+    // width: 100vw;
+    width: 100%;
     height: $hero-height;
     background-color: rgba(23, 23, 23, 0.5);
 
